@@ -37,3 +37,9 @@ nz-button-group {
   display: inline-block;
   min-width: 4rem;
 }
+.sort-form {
+  margin-bottom: 1rem;
+  button {
+    margin-right: 1rem;
+  }
+}
